--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start-shipping": "nodemon services/shipping/index.js",
         "start-inventory": "nodemon services/inventory/index.js",
         "start-frontend": "serve services/frontend",
+        "start-videos": "serve a",
         "exec": "run-p start-frontend exec-controller exec-shipping exec-inventory",
         "exec-controller": "node services/controller/index.js",
         "exec-shipping": "node services/shipping/index.js",
@@ -32,8 +33,9 @@
         "google-protobuf": "^3.15.0-rc.1"
     },
     "devDependencies": {
-        "serve": "^12.0.0",
+        "cypress": "^10.9.0",
         "nodemon": "^2.0.7",
-        "npm-run-all": "^4.1.5"
+        "npm-run-all": "^4.1.5",
+        "serve": "^12.0.0"
     }
 }
